tests/__snapshots__/api-toAcceptProps-class-components-stderr.snap.txt
Error: Component accepts props of the given type.

  51 |   test("accepts props of the given type", () => {
  52 |     expect(None).type.toAcceptProps({});
  53 |     expect(None).type.not.toAcceptProps({}); // fail
     |                           ~~~~~~~~~~~~~
  54 | 
  55 |     expect(First).type.toAcceptProps({});
  56 |     expect(First).type.not.toAcceptProps({}); // fail

       at ./__typetests__/class-components.tst.tsx:53:27 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  54 | 
  55 |     expect(First).type.toAcceptProps({});
  56 |     expect(First).type.not.toAcceptProps({}); // fail
     |                            ~~~~~~~~~~~~~
  57 | 
  58 |     expect(First).type.toAcceptProps({ one: "sample" });
  59 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail

       at ./__typetests__/class-components.tst.tsx:56:28 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  57 | 
  58 |     expect(First).type.toAcceptProps({ one: "sample" });
  59 |     expect(First).type.not.toAcceptProps({ one: "sample" }); // fail
     |                            ~~~~~~~~~~~~~
  60 | 
  61 |     expect(Second).type.toAcceptProps({ one: "sample" });
  62 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail

       at ./__typetests__/class-components.tst.tsx:59:28 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  60 | 
  61 |     expect(Second).type.toAcceptProps({ one: "sample" });
  62 |     expect(Second).type.not.toAcceptProps({ one: "sample" }); // fail
     |                             ~~~~~~~~~~~~~
  63 | 
  64 |     const oneProp = { one: "sample" };
  65 |     expect(Second).type.toAcceptProps({ ...oneProp });

       at ./__typetests__/class-components.tst.tsx:62:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  64 |     const oneProp = { one: "sample" };
  65 |     expect(Second).type.toAcceptProps({ ...oneProp });
  66 |     expect(Second).type.not.toAcceptProps({ ...oneProp }); // fail
     |                             ~~~~~~~~~~~~~
  67 | 
  68 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });
  69 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true }); // fail

       at ./__typetests__/class-components.tst.tsx:66:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  67 | 
  68 |     expect(Second).type.toAcceptProps({ one: "sample", two: true });
  69 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true }); // fail
     |                             ~~~~~~~~~~~~~
  70 | 
  71 |     const twoProps = { one: "sample", two: true };
  72 |     expect(Second).type.toAcceptProps({ ...twoProps });

       at ./__typetests__/class-components.tst.tsx:69:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component accepts props of the given type.

  71 |     const twoProps = { one: "sample", two: true };
  72 |     expect(Second).type.toAcceptProps({ ...twoProps });
  73 |     expect(Second).type.not.toAcceptProps({ ...twoProps }); // fail
     |                             ~~~~~~~~~~~~~
  74 |   });
  75 | 
  76 |   test("does not accept props of the given type", () => {

       at ./__typetests__/class-components.tst.tsx:73:29 ❭ when source is a function component ❭ accepts props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.
Property 'one' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.

  76 |   test("does not accept props of the given type", () => {
  77 |     expect(None).type.not.toAcceptProps({ one: "sample" });
  78 |     expect(None).type.toAcceptProps({ one: "sample" }); // fail: Property 'one' does not exist
     |                                       ~~~
  79 | 
  80 |     expect(First).type.not.toAcceptProps({ one: 1 });
  81 |     expect(First).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

       at ./__typetests__/class-components.tst.tsx:78:39 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  79 | 
  80 |     expect(First).type.not.toAcceptProps({ one: 1 });
  81 |     expect(First).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
     |                                        ~~~
  82 | 
  83 |     expect(First).type.not.toAcceptProps({ two: false });
  84 |     expect(First).type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist

       at ./__typetests__/class-components.tst.tsx:81:40 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps' ts(6500)

      4 | 
      5 | interface FirstProps {
      6 |   one?: string;
        |   ~~~
      7 | }
      8 | 
      9 | interface SecondProps {

          at ./__typetests__/class-components.tst.tsx:6:3

Error: Component does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  82 | 
  83 |     expect(First).type.not.toAcceptProps({ two: false });
  84 |     expect(First).type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist
     |                                        ~~~
  85 | 
  86 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  87 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist

       at ./__typetests__/class-components.tst.tsx:84:40 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  85 | 
  86 |     expect(First).type.not.toAcceptProps({ one: "sample", two: false });
  87 |     expect(First).type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist
     |                                                       ~~~
  88 | 
  89 |     expect(Second).type.not.toAcceptProps({});
  90 |     expect(Second).type.toAcceptProps({}); // fail: Property 'one' is missing

       at ./__typetests__/class-components.tst.tsx:87:55 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type 'SecondProps'.

  88 | 
  89 |     expect(Second).type.not.toAcceptProps({});
  90 |     expect(Second).type.toAcceptProps({}); // fail: Property 'one' is missing
     |                         ~~~~~~~~~~~~~
  91 | 
  92 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  93 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

       at ./__typetests__/class-components.tst.tsx:90:25 ❭ when source is a function component ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  91 | 
  92 |     expect(Second).type.not.toAcceptProps({ one: 1 });
  93 |     expect(Second).type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
     |                                         ~~~
  94 | 
  95 |     const oneProp = { one: 1 };
  96 |     expect(Second).type.not.toAcceptProps({ ...oneProp });

       at ./__typetests__/class-components.tst.tsx:93:41 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

Type '{ one: number; }' is not assignable to type 'SecondProps'.
Types of property 'one' are incompatible.
Type 'number' is not assignable to type 'string'.

   95 |     const oneProp = { one: 1 };
   96 |     expect(Second).type.not.toAcceptProps({ ...oneProp });
   97 |     expect(Second).type.toAcceptProps({ ...oneProp }); // fail: Type 'number' is not assignable
      |                         ~~~~~~~~~~~~~
   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: 2 });
  100 |     expect(Second).type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable

        at ./__typetests__/class-components.tst.tsx:97:25 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type 'number' is not assignable to type 'boolean | undefined'.

   98 | 
   99 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: 2 });
  100 |     expect(Second).type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable
      |                                                        ~~~
  101 | 
  102 |     const twoProps = { one: "sample", two: 2 };
  103 |     expect(Second).type.not.toAcceptProps({ ...twoProps });

        at ./__typetests__/class-components.tst.tsx:100:56 ❭ when source is a function component ❭ does not accept props of the given type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       9 | interface SecondProps {
      10 |   one: string | undefined;
      11 |   two?: boolean;
         |   ~~~
      12 | }
      13 | 
      14 | class None extends React.Component {

           at ./__typetests__/class-components.tst.tsx:11:3

Error: Component does not accept props of the given type.

Type '{ one: string; two: number; }' is not assignable to type 'SecondProps'.
Types of property 'two' are incompatible.
Type 'number' is not assignable to type 'boolean | undefined'.

  102 |     const twoProps = { one: "sample", two: 2 };
  103 |     expect(Second).type.not.toAcceptProps({ ...twoProps });
  104 |     expect(Second).type.toAcceptProps({ ...twoProps }); // fail: Type 'number' is not assignable
      |                         ~~~~~~~~~~~~~
  105 | 
  106 |     expect(Second).type.not.toAcceptProps({ two: true });
  107 |     expect(Second).type.toAcceptProps({ two: true }); // fail: Property 'one' is missing

        at ./__typetests__/class-components.tst.tsx:104:25 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Property 'one' is missing in type '{ two: true; }' but required in type 'SecondProps'.

  105 | 
  106 |     expect(Second).type.not.toAcceptProps({ two: true });
  107 |     expect(Second).type.toAcceptProps({ two: true }); // fail: Property 'one' is missing
      |                         ~~~~~~~~~~~~~
  108 | 
  109 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  110 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/class-components.tst.tsx:107:25 ❭ when source is a function component ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Component does not accept props of the given type.

Type '{ three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  108 | 
  109 |     expect(Second).type.not.toAcceptProps({ three: 123 });
  110 |     expect(Second).type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist
      |                                         ~~~~~
  111 | 
  112 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  113 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/class-components.tst.tsx:110:41 ❭ when source is a function component ❭ does not accept props of the given type

Error: Component does not accept props of the given type.

Type '{ one: string; two: true; three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  111 | 
  112 |     expect(Second).type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  113 |     expect(Second).type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist
      |                                                                   ~~~~~
  114 |   });
  115 | });
  116 | 

        at ./__typetests__/class-components.tst.tsx:113:67 ❭ when source is a function component ❭ does not accept props of the given type

Error: Type accepts props of the given type.

  124 |   test("accepts props of the given type", () => {
  125 |     expect<NoneConstructor>().type.toAcceptProps({});
  126 |     expect<NoneConstructor>().type.not.toAcceptProps({}); // fail
      |                                        ~~~~~~~~~~~~~
  127 | 
  128 |     expect<FirstConstructor>().type.toAcceptProps({});
  129 |     expect<FirstConstructor>().type.not.toAcceptProps({}); // fail

        at ./__typetests__/class-components.tst.tsx:126:40 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  127 | 
  128 |     expect<FirstConstructor>().type.toAcceptProps({});
  129 |     expect<FirstConstructor>().type.not.toAcceptProps({}); // fail
      |                                         ~~~~~~~~~~~~~
  130 | 
  131 |     expect<FirstConstructor>().type.toAcceptProps({ one: "sample" });
  132 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/class-components.tst.tsx:129:41 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  130 | 
  131 |     expect<FirstConstructor>().type.toAcceptProps({ one: "sample" });
  132 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: "sample" }); // fail
      |                                         ~~~~~~~~~~~~~
  133 | 
  134 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample" });
  135 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample" }); // fail

        at ./__typetests__/class-components.tst.tsx:132:41 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  133 | 
  134 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample" });
  135 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample" }); // fail
      |                                          ~~~~~~~~~~~~~
  136 | 
  137 |     const oneProp = { one: "sample" };
  138 |     expect<SecondConstructor>().type.toAcceptProps({ ...oneProp });

        at ./__typetests__/class-components.tst.tsx:135:42 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  137 |     const oneProp = { one: "sample" };
  138 |     expect<SecondConstructor>().type.toAcceptProps({ ...oneProp });
  139 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...oneProp }); // fail
      |                                          ~~~~~~~~~~~~~
  140 | 
  141 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: true });
  142 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: true }); // fail

        at ./__typetests__/class-components.tst.tsx:139:42 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  140 | 
  141 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: true });
  142 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: true }); // fail
      |                                          ~~~~~~~~~~~~~
  143 | 
  144 |     const twoProps = { one: "sample", two: true };
  145 |     expect<SecondConstructor>().type.toAcceptProps({ ...twoProps });

        at ./__typetests__/class-components.tst.tsx:142:42 ❭ when source is a type ❭ accepts props of the given type

Error: Type accepts props of the given type.

  144 |     const twoProps = { one: "sample", two: true };
  145 |     expect<SecondConstructor>().type.toAcceptProps({ ...twoProps });
  146 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...twoProps }); // fail
      |                                          ~~~~~~~~~~~~~
  147 |   });
  148 | 
  149 |   test("does not accept props of the given type", () => {

        at ./__typetests__/class-components.tst.tsx:146:42 ❭ when source is a type ❭ accepts props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.
Property 'one' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<None>'.

  149 |   test("does not accept props of the given type", () => {
  150 |     expect<NoneConstructor>().type.not.toAcceptProps({ one: "sample" });
  151 |     expect<NoneConstructor>().type.toAcceptProps({ one: "sample" }); // fail: Property 'one' does not exist
      |                                                    ~~~
  152 | 
  153 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: 1 });
  154 |     expect<FirstConstructor>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

        at ./__typetests__/class-components.tst.tsx:151:52 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  152 | 
  153 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: 1 });
  154 |     expect<FirstConstructor>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
      |                                                     ~~~
  155 | 
  156 |     expect<FirstConstructor>().type.not.toAcceptProps({ two: false });
  157 |     expect<FirstConstructor>().type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist

        at ./__typetests__/class-components.tst.tsx:154:53 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps' ts(6500)

      4 | 
      5 | interface FirstProps {
      6 |   one?: string;
        |   ~~~
      7 | }
      8 | 
      9 | interface SecondProps {

          at ./__typetests__/class-components.tst.tsx:6:3

Error: Type does not accept props of the given type.

Type '{ two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  155 | 
  156 |     expect<FirstConstructor>().type.not.toAcceptProps({ two: false });
  157 |     expect<FirstConstructor>().type.toAcceptProps({ two: false }); // fail: Property 'two' does not exist
      |                                                     ~~~
  158 | 
  159 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: "sample", two: false });
  160 |     expect<FirstConstructor>().type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist

        at ./__typetests__/class-components.tst.tsx:157:53 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; two: boolean; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.
Property 'two' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<First> & FirstProps'.

  158 | 
  159 |     expect<FirstConstructor>().type.not.toAcceptProps({ one: "sample", two: false });
  160 |     expect<FirstConstructor>().type.toAcceptProps({ one: "sample", two: false }); // fail: Property 'two' does not exist
      |                                                                    ~~~
  161 | 
  162 |     expect<SecondConstructor>().type.not.toAcceptProps({});
  163 |     expect<SecondConstructor>().type.toAcceptProps({}); // fail: Property 'one' is missing

        at ./__typetests__/class-components.tst.tsx:160:68 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Property 'one' is missing in type '{}' but required in type 'SecondProps'.

  161 | 
  162 |     expect<SecondConstructor>().type.not.toAcceptProps({});
  163 |     expect<SecondConstructor>().type.toAcceptProps({}); // fail: Property 'one' is missing
      |                                      ~~~~~~~~~~~~~
  164 | 
  165 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: 1 });
  166 |     expect<SecondConstructor>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable

        at ./__typetests__/class-components.tst.tsx:163:38 ❭ when source is a type ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'string'.

  164 | 
  165 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: 1 });
  166 |     expect<SecondConstructor>().type.toAcceptProps({ one: 1 }); // fail: Type 'number' is not assignable
      |                                                      ~~~
  167 | 
  168 |     const oneProp = { one: 1 };
  169 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...oneProp });

        at ./__typetests__/class-components.tst.tsx:166:54 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'one' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Type does not accept props of the given type.

Type '{ one: number; }' is not assignable to type 'SecondProps'.
Types of property 'one' are incompatible.
Type 'number' is not assignable to type 'string'.

  168 |     const oneProp = { one: 1 };
  169 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...oneProp });
  170 |     expect<SecondConstructor>().type.toAcceptProps({ ...oneProp }); // fail: Type 'number' is not assignable
      |                                      ~~~~~~~~~~~~~
  171 | 
  172 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: 2 });
  173 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable

        at ./__typetests__/class-components.tst.tsx:170:38 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type 'number' is not assignable to type 'boolean | undefined'.

  171 | 
  172 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: 2 });
  173 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: 2 }); // fail: Type 'number' is not assignable
      |                                                                     ~~~
  174 | 
  175 |     const twoProps = { one: "sample", two: 2 };
  176 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...twoProps });

        at ./__typetests__/class-components.tst.tsx:173:69 ❭ when source is a type ❭ does not accept props of the given type

    The expected type comes from property 'two' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps' ts(6500)

       9 | interface SecondProps {
      10 |   one: string | undefined;
      11 |   two?: boolean;
         |   ~~~
      12 | }
      13 | 
      14 | class None extends React.Component {

           at ./__typetests__/class-components.tst.tsx:11:3

Error: Type does not accept props of the given type.

Type '{ one: string; two: number; }' is not assignable to type 'SecondProps'.
Types of property 'two' are incompatible.
Type 'number' is not assignable to type 'boolean | undefined'.

  175 |     const twoProps = { one: "sample", two: 2 };
  176 |     expect<SecondConstructor>().type.not.toAcceptProps({ ...twoProps });
  177 |     expect<SecondConstructor>().type.toAcceptProps({ ...twoProps }); // fail: Type 'number' is not assignable
      |                                      ~~~~~~~~~~~~~
  178 | 
  179 |     expect<SecondConstructor>().type.not.toAcceptProps({ two: true });
  180 |     expect<SecondConstructor>().type.toAcceptProps({ two: true }); // fail: Property 'one' is missing

        at ./__typetests__/class-components.tst.tsx:177:38 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Property 'one' is missing in type '{ two: true; }' but required in type 'SecondProps'.

  178 | 
  179 |     expect<SecondConstructor>().type.not.toAcceptProps({ two: true });
  180 |     expect<SecondConstructor>().type.toAcceptProps({ two: true }); // fail: Property 'one' is missing
      |                                      ~~~~~~~~~~~~~
  181 | 
  182 |     expect<SecondConstructor>().type.not.toAcceptProps({ three: 123 });
  183 |     expect<SecondConstructor>().type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/class-components.tst.tsx:180:38 ❭ when source is a type ❭ does not accept props of the given type

    'one' is declared here. ts(2728)

       8 | 
       9 | interface SecondProps {
      10 |   one: string | undefined;
         |   ~~~
      11 |   two?: boolean;
      12 | }
      13 | 

           at ./__typetests__/class-components.tst.tsx:10:3

Error: Type does not accept props of the given type.

Type '{ three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  181 | 
  182 |     expect<SecondConstructor>().type.not.toAcceptProps({ three: 123 });
  183 |     expect<SecondConstructor>().type.toAcceptProps({ three: 123 }); // fail: Property 'three' does not exist
      |                                                      ~~~~~
  184 | 
  185 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  186 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist

        at ./__typetests__/class-components.tst.tsx:183:54 ❭ when source is a type ❭ does not accept props of the given type

Error: Type does not accept props of the given type.

Type '{ one: string; two: true; three: number; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.
Property 'three' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Second> & SecondProps'.

  184 | 
  185 |     expect<SecondConstructor>().type.not.toAcceptProps({ one: "sample", two: true, three: 123 });
  186 |     expect<SecondConstructor>().type.toAcceptProps({ one: "sample", two: true, three: 123 }); // fail: Property 'three' does not exist
      |                                                                                ~~~~~
  187 |   });
  188 | });
  189 | 

        at ./__typetests__/class-components.tst.tsx:186:80 ❭ when source is a type ❭ does not accept props of the given type

